# ros2-hsa

./: README.md
dynamixel_control/: CMakeLists.txt  package.xml
dynamixel_control/include/: read_write_node.hpp  single_read_single_write_node.hpp  sync_read_single_write_node.hpp
dynamixel_control/src/: read_write_node.cpp  single_read_single_write_node.cpp  sync_read_single_write_node.cpp
dynamixel_control_custom_interfaces/: CMakeLists.txt  package.xml
dynamixel_control_custom_interfaces/srv/: GetPosition.srv  GetPositions.srv
hsa_actuation/: package.xml  setup.cfg  setup.py
hsa_actuation/hsa_actuation/: hsa_actuation_base_node.py  hsa_planar_actuation_base_node.py  hsa_planar_actuation_by_msg_node.py  planar_motor_babbling_node.py  present_motor_state_pub_node.py
hsa_control_interfaces/: CMakeLists.txt  package.xml
hsa_control_interfaces/msg/: PlanarSetpoint.msg  PlanarSetpointControllerInfo.msg  Pose2DStamped.msg
hsa_inverse_kinematics/: package.xml  setup.cfg  setup.py
hsa_inverse_kinematics/config/: world_to_base_y_up.yaml
hsa_inverse_kinematics/hsa_inverse_kinematics/: planar_cs_ik_node.py
hsa_joy_control/: package.xml  setup.cfg  setup.py
hsa_joy_control/hsa_joy_control/: planar_hsa_bending_joy_control_node.py  planar_hsa_cartesian_joy_control_node.py
hsa_kinematic_control/: package.xml  setup.cfg  setup.py
hsa_kinematic_control/hsa_kinematic_control/: planar_kinematic_control.py  planar_kinematic_control_node.py
hsa_motor_babbling/: package.xml  setup.cfg  setup.py
hsa_motor_babbling/hsa_motor_babbling/: planar_motor_babbling_node.py
hsa_sim/: README.md  package.xml  setup.cfg  setup.py
hsa_sim/hsa_sim/: planar_sim_node.py
hsa_sim/hsa_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hsa_trajectory_planner/hsa_trajectory_planner/: planar_bending_trajectory_node.py
hsa_velocity_estimation/: package.xml  setup.cfg  setup.py
hsa_velocity_estimation/hsa_velocity_estimation/: planar_hsa_velocity_estimator_node.py
hsa_visualization/: package.xml  setup.cfg  setup.py
hsa_visualization/hsa_visualization/: planar_opencv_renderer.py  planar_viz_node.py
joylike_operation/: setup.py
joylike_operation/config/: keystroke2joy_cartesian_switch.yaml
joylike_operation/joylike_operation/: keyboard_to_joy_node.py  openvibe_stimulation_to_joy_node.py  openvibe_two_classifier_stimulation_to_joy_node.py
launch/: hsa_inverse_kinematics_launch.py  hsa_planar_cl_control.py  hsa_planar_kinematic_cl_launch.py  hsa_planar_sim_launch.py
scripts/: extract_data_from_planar_rosbag2.py  extract_data_from_planar_rosbag2_v2.py
