<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_control</name>
  <version>3.7.60</version>
  <description>ROS2 (position) control of the dynamixel motors using ROBOTIS DYNAMIXEL SDK</description>
  <license>Apache 2.0</license>
  <maintainer email="maximilian@stoelzle.ch">Maximilian Stölzle</maintainer>
  <author email="maximilian@stoelzle.ch">Maximilian Stölzle</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_sdk_custom_interfaces</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
