<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsa_inverse_kinematics</name>
  <version>0.0.0</version>
  <description>Inverse kinematics for one segment planar HSA robots.</description>
  <maintainer email="maximilian@stoelzle.ch">Maximilian Stoelzle</maintainer>
  <license>MIT</license>

  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>mocap_optitrack_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
